@@ -245,6 +245,8 @@ Release 0.9.1 - Unreleased
 
 IMPROVEMENTS
 
+PIG-2284: Add pig-setup-conf.sh script (eyang via daijy)
+
 PIG-2272: e2e test harness should be able to set HADOOP_HOME (gates via daijy)
 
 PIG-2239: Pig should use "bin/hadoop jar pig-withouthadoop.jar" in bin/pig instead of forming java command itself (daijy)
